@startuml

title __AIRPORTMANAGER-API's Class Diagram__\n

  namespace pl.edu.uj.ii.ionb.airportmanager.services {
    interface pl.edu.uj.ii.ionb.airportmanager.services.AirplaneService {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.services {
    interface pl.edu.uj.ii.ionb.airportmanager.services.DestinationService {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.services {
    interface pl.edu.uj.ii.ionb.airportmanager.services.FlightService {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.services {
    interface pl.edu.uj.ii.ionb.airportmanager.services.StewardService {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.AirplaneTO {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO {
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.StewardTO {
    }
  }
  

  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.AirplaneTO : airplaneTO
  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO : origin
  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO : target


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
